// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unit test for the CountryDetail component should not render delete for user that without edit privilege. 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="Toastify"
      />
      <div
        class="flex flex-col lg:flex-row pb-8"
      >
        <div
          class="relative lg:sticky lg:top-66px w-full lg:w-1/3 xl:w-1/4 h-full py-4 px-4"
        >
          <div
            class="block lg:hidden"
          >
            <div
              class="bg-white pb-3 lg:py-4 whitespace-nowrap text-ellipsis overflow-hidden"
            >
              <a
                class="inline text-dial-sapphire h5"
                href="/"
              >
                Home
              </a>
              <div
                class="inline h5"
              >
                 &gt; 
                <a
                  class="text-dial-gray-dark"
                  href="/"
                />
              </div>
            </div>
          </div>
          <div
            class="pb-4"
          />
          <div
            class="bg-white border-2 border-dial-gray lg:mr-6 shadow-lg"
          >
            <div
              class="flex flex-col p-4"
            >
              <div
                class="font-semibold text-lg text-dial-gray-dark"
              >
                Kenya
              </div>
              <div
                class="border-b my-2"
              />
              <div
                class="text-sm text-dial-gray-dark"
              >
                <span
                  class="font-semibold"
                >
                  Country Alpha-2
                </span>
                : 
                KE
              </div>
              <div
                class="text-sm text-dial-gray-dark"
              >
                <span
                  class="font-semibold"
                >
                  Country Alpha-3
                </span>
                : 
                KEN
              </div>
            </div>
          </div>
        </div>
        <div
          class="px-4 w-full lg:w-2/3 xl:w-3/4 flex flex-col"
        >
          <div
            class="hidden lg:block"
          >
            <div
              class="bg-white pb-3 lg:py-4 whitespace-nowrap text-ellipsis overflow-hidden"
            >
              <a
                class="inline text-dial-sapphire h5"
                href="/"
              >
                Home
              </a>
              <div
                class="inline h5"
              >
                 &gt; 
                <a
                  class="text-dial-gray-dark"
                  href="/"
                />
              </div>
            </div>
          </div>
          <div
            class="flex flex-col lg:flex-row gap-3"
          >
            <div>
              Loading Map data ...
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="Toastify"
    />
    <div
      class="flex flex-col lg:flex-row pb-8"
    >
      <div
        class="relative lg:sticky lg:top-66px w-full lg:w-1/3 xl:w-1/4 h-full py-4 px-4"
      >
        <div
          class="block lg:hidden"
        >
          <div
            class="bg-white pb-3 lg:py-4 whitespace-nowrap text-ellipsis overflow-hidden"
          >
            <a
              class="inline text-dial-sapphire h5"
              href="/"
            >
              Home
            </a>
            <div
              class="inline h5"
            >
               &gt; 
              <a
                class="text-dial-gray-dark"
                href="/"
              />
            </div>
          </div>
        </div>
        <div
          class="pb-4"
        />
        <div
          class="bg-white border-2 border-dial-gray lg:mr-6 shadow-lg"
        >
          <div
            class="flex flex-col p-4"
          >
            <div
              class="font-semibold text-lg text-dial-gray-dark"
            >
              Kenya
            </div>
            <div
              class="border-b my-2"
            />
            <div
              class="text-sm text-dial-gray-dark"
            >
              <span
                class="font-semibold"
              >
                Country Alpha-2
              </span>
              : 
              KE
            </div>
            <div
              class="text-sm text-dial-gray-dark"
            >
              <span
                class="font-semibold"
              >
                Country Alpha-3
              </span>
              : 
              KEN
            </div>
          </div>
        </div>
      </div>
      <div
        class="px-4 w-full lg:w-2/3 xl:w-3/4 flex flex-col"
      >
        <div
          class="hidden lg:block"
        >
          <div
            class="bg-white pb-3 lg:py-4 whitespace-nowrap text-ellipsis overflow-hidden"
          >
            <a
              class="inline text-dial-sapphire h5"
              href="/"
            >
              Home
            </a>
            <div
              class="inline h5"
            >
               &gt; 
              <a
                class="text-dial-gray-dark"
                href="/"
              />
            </div>
          </div>
        </div>
        <div
          class="flex flex-col lg:flex-row gap-3"
        >
          <div>
            Loading Map data ...
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Unit test for the CountryDetail component should render element of the country data with missing location. 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="Toastify"
      />
      <div
        class="flex flex-col lg:flex-row pb-8"
      >
        <div
          class="relative lg:sticky lg:top-66px w-full lg:w-1/3 xl:w-1/4 h-full py-4 px-4"
        >
          <div
            class="block lg:hidden"
          >
            <div
              class="bg-white pb-3 lg:py-4 whitespace-nowrap text-ellipsis overflow-hidden"
            >
              <a
                class="inline text-dial-sapphire h5"
                href="/"
              >
                Home
              </a>
              <div
                class="inline h5"
              >
                 &gt; 
                <a
                  class="text-dial-gray-dark"
                  href="/"
                />
              </div>
            </div>
          </div>
          <div
            class="pb-4"
          >
            <div
              class="flex flex-row gap-3"
            >
              <button
                class="delete-button gap-x-1.5"
                data-testid="delete-button"
                type="button"
              >
                <svg
                  class="text-sm"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 448 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M268 416h24a12 12 0 0 0 12-12V188a12 12 0 0 0-12-12h-24a12 12 0 0 0-12 12v216a12 12 0 0 0 12 12zM432 80h-82.41l-34-56.7A48 48 0 0 0 274.41 0H173.59a48 48 0 0 0-41.16 23.3L98.41 80H16A16 16 0 0 0 0 96v16a16 16 0 0 0 16 16h16v336a48 48 0 0 0 48 48h288a48 48 0 0 0 48-48V128h16a16 16 0 0 0 16-16V96a16 16 0 0 0-16-16zM171.84 50.91A6 6 0 0 1 177 48h94a6 6 0 0 1 5.15 2.91L293.61 80H154.39zM368 464H80V128h288zm-212-48h24a12 12 0 0 0 12-12V188a12 12 0 0 0-12-12h-24a12 12 0 0 0-12 12v216a12 12 0 0 0 12 12z"
                  />
                </svg>
                <span
                  class="text-sm"
                >
                  Delete
                </span>
              </button>
              <button
                class="cursor-pointer bg-dial-iris-blue px-2 py-0.5 rounded text-white"
                data-testid="edit-button"
                type="button"
              >
                <svg
                  class="inline pb-0.5"
                  fill="none"
                  height="1em"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 20h9"
                  />
                  <path
                    d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"
                  />
                </svg>
                <span
                  class="text-sm px-1"
                >
                  Edit
                </span>
              </button>
            </div>
          </div>
          <div
            class="bg-white border-2 border-dial-gray lg:mr-6 shadow-lg"
          >
            <div
              class="flex flex-col p-4"
            >
              <div
                class="font-semibold text-lg text-dial-gray-dark"
              >
                India
              </div>
              <div
                class="border-b my-2"
              />
              <div
                class="text-sm text-dial-gray-dark"
              >
                <span
                  class="font-semibold"
                >
                  Country Alpha-2
                </span>
                : 
                IN
              </div>
              <div
                class="text-sm text-dial-gray-dark"
              >
                <span
                  class="font-semibold"
                >
                  Country Alpha-3
                </span>
                : 
                IND
              </div>
            </div>
          </div>
        </div>
        <div
          class="px-4 w-full lg:w-2/3 xl:w-3/4 flex flex-col"
        >
          <div
            class="hidden lg:block"
          >
            <div
              class="bg-white pb-3 lg:py-4 whitespace-nowrap text-ellipsis overflow-hidden"
            >
              <a
                class="inline text-dial-sapphire h5"
                href="/"
              >
                Home
              </a>
              <div
                class="inline h5"
              >
                 &gt; 
                <a
                  class="text-dial-gray-dark"
                  href="/"
                />
              </div>
            </div>
          </div>
          <div
            class="flex flex-col lg:flex-row gap-3"
          />
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="Toastify"
    />
    <div
      class="flex flex-col lg:flex-row pb-8"
    >
      <div
        class="relative lg:sticky lg:top-66px w-full lg:w-1/3 xl:w-1/4 h-full py-4 px-4"
      >
        <div
          class="block lg:hidden"
        >
          <div
            class="bg-white pb-3 lg:py-4 whitespace-nowrap text-ellipsis overflow-hidden"
          >
            <a
              class="inline text-dial-sapphire h5"
              href="/"
            >
              Home
            </a>
            <div
              class="inline h5"
            >
               &gt; 
              <a
                class="text-dial-gray-dark"
                href="/"
              />
            </div>
          </div>
        </div>
        <div
          class="pb-4"
        >
          <div
            class="flex flex-row gap-3"
          >
            <button
              class="delete-button gap-x-1.5"
              data-testid="delete-button"
              type="button"
            >
              <svg
                class="text-sm"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 448 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M268 416h24a12 12 0 0 0 12-12V188a12 12 0 0 0-12-12h-24a12 12 0 0 0-12 12v216a12 12 0 0 0 12 12zM432 80h-82.41l-34-56.7A48 48 0 0 0 274.41 0H173.59a48 48 0 0 0-41.16 23.3L98.41 80H16A16 16 0 0 0 0 96v16a16 16 0 0 0 16 16h16v336a48 48 0 0 0 48 48h288a48 48 0 0 0 48-48V128h16a16 16 0 0 0 16-16V96a16 16 0 0 0-16-16zM171.84 50.91A6 6 0 0 1 177 48h94a6 6 0 0 1 5.15 2.91L293.61 80H154.39zM368 464H80V128h288zm-212-48h24a12 12 0 0 0 12-12V188a12 12 0 0 0-12-12h-24a12 12 0 0 0-12 12v216a12 12 0 0 0 12 12z"
                />
              </svg>
              <span
                class="text-sm"
              >
                Delete
              </span>
            </button>
            <button
              class="cursor-pointer bg-dial-iris-blue px-2 py-0.5 rounded text-white"
              data-testid="edit-button"
              type="button"
            >
              <svg
                class="inline pb-0.5"
                fill="none"
                height="1em"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 20h9"
                />
                <path
                  d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"
                />
              </svg>
              <span
                class="text-sm px-1"
              >
                Edit
              </span>
            </button>
          </div>
        </div>
        <div
          class="bg-white border-2 border-dial-gray lg:mr-6 shadow-lg"
        >
          <div
            class="flex flex-col p-4"
          >
            <div
              class="font-semibold text-lg text-dial-gray-dark"
            >
              India
            </div>
            <div
              class="border-b my-2"
            />
            <div
              class="text-sm text-dial-gray-dark"
            >
              <span
                class="font-semibold"
              >
                Country Alpha-2
              </span>
              : 
              IN
            </div>
            <div
              class="text-sm text-dial-gray-dark"
            >
              <span
                class="font-semibold"
              >
                Country Alpha-3
              </span>
              : 
              IND
            </div>
          </div>
        </div>
      </div>
      <div
        class="px-4 w-full lg:w-2/3 xl:w-3/4 flex flex-col"
      >
        <div
          class="hidden lg:block"
        >
          <div
            class="bg-white pb-3 lg:py-4 whitespace-nowrap text-ellipsis overflow-hidden"
          >
            <a
              class="inline text-dial-sapphire h5"
              href="/"
            >
              Home
            </a>
            <div
              class="inline h5"
            >
               &gt; 
              <a
                class="text-dial-gray-dark"
                href="/"
              />
            </div>
          </div>
        </div>
        <div
          class="flex flex-col lg:flex-row gap-3"
        />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Unit test for the CountryDetail component should render element of the country data. 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="Toastify"
      />
      <div
        class="flex flex-col lg:flex-row pb-8"
      >
        <div
          class="relative lg:sticky lg:top-66px w-full lg:w-1/3 xl:w-1/4 h-full py-4 px-4"
        >
          <div
            class="block lg:hidden"
          >
            <div
              class="bg-white pb-3 lg:py-4 whitespace-nowrap text-ellipsis overflow-hidden"
            >
              <a
                class="inline text-dial-sapphire h5"
                href="/"
              >
                Home
              </a>
              <div
                class="inline h5"
              >
                 &gt; 
                <a
                  class="text-dial-gray-dark"
                  href="/"
                />
              </div>
            </div>
          </div>
          <div
            class="pb-4"
          >
            <div
              class="flex flex-row gap-3"
            >
              <button
                class="delete-button gap-x-1.5"
                data-testid="delete-button"
                type="button"
              >
                <svg
                  class="text-sm"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 448 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M268 416h24a12 12 0 0 0 12-12V188a12 12 0 0 0-12-12h-24a12 12 0 0 0-12 12v216a12 12 0 0 0 12 12zM432 80h-82.41l-34-56.7A48 48 0 0 0 274.41 0H173.59a48 48 0 0 0-41.16 23.3L98.41 80H16A16 16 0 0 0 0 96v16a16 16 0 0 0 16 16h16v336a48 48 0 0 0 48 48h288a48 48 0 0 0 48-48V128h16a16 16 0 0 0 16-16V96a16 16 0 0 0-16-16zM171.84 50.91A6 6 0 0 1 177 48h94a6 6 0 0 1 5.15 2.91L293.61 80H154.39zM368 464H80V128h288zm-212-48h24a12 12 0 0 0 12-12V188a12 12 0 0 0-12-12h-24a12 12 0 0 0-12 12v216a12 12 0 0 0 12 12z"
                  />
                </svg>
                <span
                  class="text-sm"
                >
                  Delete
                </span>
              </button>
              <button
                class="cursor-pointer bg-dial-iris-blue px-2 py-0.5 rounded text-white"
                data-testid="edit-button"
                type="button"
              >
                <svg
                  class="inline pb-0.5"
                  fill="none"
                  height="1em"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 20h9"
                  />
                  <path
                    d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"
                  />
                </svg>
                <span
                  class="text-sm px-1"
                >
                  Edit
                </span>
              </button>
            </div>
          </div>
          <div
            class="bg-white border-2 border-dial-gray lg:mr-6 shadow-lg"
          >
            <div
              class="flex flex-col p-4"
            >
              <div
                class="font-semibold text-lg text-dial-gray-dark"
              >
                Kenya
              </div>
              <div
                class="border-b my-2"
              />
              <div
                class="text-sm text-dial-gray-dark"
              >
                <span
                  class="font-semibold"
                >
                  Country Alpha-2
                </span>
                : 
                KE
              </div>
              <div
                class="text-sm text-dial-gray-dark"
              >
                <span
                  class="font-semibold"
                >
                  Country Alpha-3
                </span>
                : 
                KEN
              </div>
            </div>
          </div>
        </div>
        <div
          class="px-4 w-full lg:w-2/3 xl:w-3/4 flex flex-col"
        >
          <div
            class="hidden lg:block"
          >
            <div
              class="bg-white pb-3 lg:py-4 whitespace-nowrap text-ellipsis overflow-hidden"
            >
              <a
                class="inline text-dial-sapphire h5"
                href="/"
              >
                Home
              </a>
              <div
                class="inline h5"
              >
                 &gt; 
                <a
                  class="text-dial-gray-dark"
                  href="/"
                />
              </div>
            </div>
          </div>
          <div
            class="flex flex-col lg:flex-row gap-3"
          >
            <div>
              Loading Map data ...
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="Toastify"
    />
    <div
      class="flex flex-col lg:flex-row pb-8"
    >
      <div
        class="relative lg:sticky lg:top-66px w-full lg:w-1/3 xl:w-1/4 h-full py-4 px-4"
      >
        <div
          class="block lg:hidden"
        >
          <div
            class="bg-white pb-3 lg:py-4 whitespace-nowrap text-ellipsis overflow-hidden"
          >
            <a
              class="inline text-dial-sapphire h5"
              href="/"
            >
              Home
            </a>
            <div
              class="inline h5"
            >
               &gt; 
              <a
                class="text-dial-gray-dark"
                href="/"
              />
            </div>
          </div>
        </div>
        <div
          class="pb-4"
        >
          <div
            class="flex flex-row gap-3"
          >
            <button
              class="delete-button gap-x-1.5"
              data-testid="delete-button"
              type="button"
            >
              <svg
                class="text-sm"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 448 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M268 416h24a12 12 0 0 0 12-12V188a12 12 0 0 0-12-12h-24a12 12 0 0 0-12 12v216a12 12 0 0 0 12 12zM432 80h-82.41l-34-56.7A48 48 0 0 0 274.41 0H173.59a48 48 0 0 0-41.16 23.3L98.41 80H16A16 16 0 0 0 0 96v16a16 16 0 0 0 16 16h16v336a48 48 0 0 0 48 48h288a48 48 0 0 0 48-48V128h16a16 16 0 0 0 16-16V96a16 16 0 0 0-16-16zM171.84 50.91A6 6 0 0 1 177 48h94a6 6 0 0 1 5.15 2.91L293.61 80H154.39zM368 464H80V128h288zm-212-48h24a12 12 0 0 0 12-12V188a12 12 0 0 0-12-12h-24a12 12 0 0 0-12 12v216a12 12 0 0 0 12 12z"
                />
              </svg>
              <span
                class="text-sm"
              >
                Delete
              </span>
            </button>
            <button
              class="cursor-pointer bg-dial-iris-blue px-2 py-0.5 rounded text-white"
              data-testid="edit-button"
              type="button"
            >
              <svg
                class="inline pb-0.5"
                fill="none"
                height="1em"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 20h9"
                />
                <path
                  d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"
                />
              </svg>
              <span
                class="text-sm px-1"
              >
                Edit
              </span>
            </button>
          </div>
        </div>
        <div
          class="bg-white border-2 border-dial-gray lg:mr-6 shadow-lg"
        >
          <div
            class="flex flex-col p-4"
          >
            <div
              class="font-semibold text-lg text-dial-gray-dark"
            >
              Kenya
            </div>
            <div
              class="border-b my-2"
            />
            <div
              class="text-sm text-dial-gray-dark"
            >
              <span
                class="font-semibold"
              >
                Country Alpha-2
              </span>
              : 
              KE
            </div>
            <div
              class="text-sm text-dial-gray-dark"
            >
              <span
                class="font-semibold"
              >
                Country Alpha-3
              </span>
              : 
              KEN
            </div>
          </div>
        </div>
      </div>
      <div
        class="px-4 w-full lg:w-2/3 xl:w-3/4 flex flex-col"
      >
        <div
          class="hidden lg:block"
        >
          <div
            class="bg-white pb-3 lg:py-4 whitespace-nowrap text-ellipsis overflow-hidden"
          >
            <a
              class="inline text-dial-sapphire h5"
              href="/"
            >
              Home
            </a>
            <div
              class="inline h5"
            >
               &gt; 
              <a
                class="text-dial-gray-dark"
                href="/"
              />
            </div>
          </div>
        </div>
        <div
          class="flex flex-col lg:flex-row gap-3"
        >
          <div>
            Loading Map data ...
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
